# IDIA_pipeline

./: .gitignore  README.md  default_config.toml  pyproject.toml
.beads/: config.yaml  metadata.json
processMeerKAT/: bookkeeping.py  config_parser.py  constants.py  pipeline.py  processMeerKAT.py  slurm_jobs.py  spw.py
processMeerKAT/facilities/: __init__.py  base.py  generic_slurm.py  ilifu.py
src/processMeerKAT/: __init__.py  bookkeeping.py  config_parser.py  constants.py  default_config.toml  default_config.txt  default_config.yaml  pipeline.py  processMeerKAT.py  read_ms.py  science_image.py  slurm_jobs.py  spw.py  validate_input.py  xyamb.py
src/processMeerKAT/aux_scripts/: concat.py
src/processMeerKAT/crosscal_scripts/: apply_to_target.py  calc_refant.py  concat_caltables.py  concat_target.py  flag_round_1.py  flag_round_2.py  partition.py  partition_target.py  plot_data.py  plotcal_spw.py  quick_tclean.py  setjy.py  split.py  xx_yy_apply.py  xx_yy_solve.py  xy_yx_apply.py  xy_yx_solve.py
src/processMeerKAT/facilities/: __init__.py  base.py  generic_slurm.py  ilifu.py
src/processMeerKAT/selfcal_scripts/: selfcal_part1.py  selfcal_part2.py  set_sky_model.py
tests/: conftest.py  test_apply_to_target.py  test_bookkeeping.py  test_cli.py  test_concat_caltables.py  test_config_parser.py  test_facility.py  test_flag_round_1.py  test_integration_slurm.py  test_orchestrator.py  test_partition_fields.py  test_read_ms_auto_spw.py  test_runner_invocation.py  test_spw.py  test_target_branch_dag.py  test_write_jobs.py
