[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "processMeerKAT"
version = "2.0"
description = "IDIA MeerKAT calibration and imaging pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
# Runtime dependencies are system-supplied (CASA / casatasks, SLURM, MPI).
# No pip-installable dependencies are needed for the orchestrator itself.
dependencies = []

[project.scripts]
processMeerKAT = "processMeerKAT.processMeerKAT:main"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Include config template and auxiliary data bundled with the package.
# selfcal_scripts/ and aux_scripts/ have no __init__.py so they are not
# auto-discovered as sub-packages; include them explicitly as data.
"processMeerKAT" = [
    "default_config.txt",
    "RACS.fits.gz",
    "selfcal_scripts/*.py",
    "aux_scripts/*.py",
]

# ---------------------------------------------------------------------------
# Test configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# Add processMeerKAT/ to sys.path so tests can do `import bookkeeping` etc.
# directly, matching the flat-import style used by the modules themselves.
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
