[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "processMeerKAT"
version = "2.0"
description = "IDIA MeerKAT calibration and imaging pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6",
]

[project.scripts]
processMeerKAT = "processMeerKAT.processMeerKAT:main"

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundled non-Python data. crosscal_scripts/, selfcal_scripts/, aux_scripts/
# are real subpackages (each has __init__.py) and are auto-discovered by
# setuptools — no need to enumerate their .py files here.
"processMeerKAT" = [
    "default_config.yaml",
    "RACS.fits.gz",
]

# ---------------------------------------------------------------------------
# Test configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
